core: Moved a handful of words into a .runtime. chain
The reasoning is simple: These are words that should only be *compiled*,
never run in interpret mode.

By creating a new chain and moving these "compile-only" words into it,
we not only clean up the .forth. chain, but also make it impossible to
do simple foot-shootings like executing  >r  while interpreting.

This required some changes to the C names of routines and to the
dictionary code, so a complete re-configure and re-make is necessary.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -61,11 +61,24 @@ public.h : .public.h
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
 	cat ${.ALLSRC}) > ${.TARGET}
 
+runtime_chain.h : public.h ../scripts/gen_dict_chain.sed $(makefiles)
+	@echo Making ${.TARGET}
+	@(echo "/* This file is automagically generated. Do not edit! */"; \
+	sed ${SEDEXT} \
+		-f ../scripts/keep_preprocessor.sed \
+		-e '/^void mu_runtime/!d' \
+		-e 's/mu_runtime_/mu_/' \
+		-f ../scripts/gen_dict_chain.sed \
+		-e 's/mu_/mu_runtime_/' public.h \
+	) > ${.TARGET}
+
 forth_chain.h : public.h ../scripts/gen_dict_chain.sed $(makefiles)
 	@echo Making ${.TARGET}
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
 	sed ${SEDEXT} \
+		-f ../scripts/keep_preprocessor.sed \
 		-e '/^void mu_compiler/d' \
+		-e '/^void mu_runtime/d' \
 		-f ../scripts/gen_dict_chain.sed public.h \
 	) > ${.TARGET}
 
@@ -73,13 +86,14 @@ compiler_chain.h : public.h ../scripts/gen_dict_chain.sed $(makefiles)
 	@echo Making ${.TARGET}
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
 	sed ${SEDEXT} \
+		-f ../scripts/keep_preprocessor.sed \
 		-e '/^void mu_compiler/!d' \
 		-e 's/mu_compiler_/mu_/' \
 		-f ../scripts/gen_dict_chain.sed \
 		-e 's/mu_/mu_compiler_/' public.h \
 	) > ${.TARGET}
 
-dict.o : forth_chain.h compiler_chain.h
+dict.o : forth_chain.h compiler_chain.h runtime_chain.h
 
 .SUFFIXES : .ph .asm
 
