[core] Make it easy to add C code to muforth
My defining

  LOCALOBJS=	foo.o bar.o

in your muforth/src/local.mk file (create one if necessary), the
Makefile will try to compile those files and link them into the muforth
executable.

By adhering to the naming convention

  void mu_my_muforth_primitive(void)

your primitives will automagically get added to the public.h include
file that all C code includes, *and* a dictionary entry (in the .forth.
chain) will be created. Certain words used in the C name turn into weird
Forth punctuation; for a list of these look in
scripts/gen_dict_chain.sed . Mostly what happens is that the underscores
go away and the words get crunched together.

The example above would add

  mymuforthprimitive

to the dictionary.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -26,7 +26,7 @@ LDFLAGS=	${ARCH_LD}
 COREOBJS=	kernel.o engine-itc.o interpret.o dict.o error.o
 
 # Optional bits
-OPTOBJS=
+OPTOBJS=	${LOCALOBJS}
 
 .ifdef WITH_LFSR
 # Add the linear feedback shift register experiments
