[core, rebuild] Added cheap and nasty UTF-8 to wchar conversion
I needed this because I want to be able to compile USB string
descriptors, which are UCS-16LE, and because I can easily enter UTF-8
strings (using Vim) I needed an easy way to convert these to UCS-16LE.

This code just returns a wchar_t, but assuming (and/or checking) that
the code point is in the basic multilingual plane (BMP) - aka the first
65536 code points - then it can be compiled into the dictionary easily,
eg like this:

  : le16,  dup c, ( low byte)  8 >> c,  ( high byte) ;

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -23,7 +23,7 @@ LDFLAGS=	${ARCH_LD}
 #DEBUG+=		-DDEBUG_USB_ENUMERATION
 
 # Core objects
-COREOBJS=	kernel.o engine-itc.o interpret.o dict.o error.o
+COREOBJS=	kernel.o engine-itc.o interpret.o dict.o error.o utf8.o
 
 # Optional bits
 OPTOBJS=	${LOCALOBJS}
