[core] scripts to rename target/HC08/ to target/S08/

--- a/scripts/do_sed.sh.in
+++ b/scripts/do_sed.sh.in
@@ -2,6 +2,12 @@
 
 echo Processing $1
 
+# change target/HC08/ to target/S08/
+sed %sedext% \
+	-f scripts/target-hc08.sed \
+	$1 > $1.sedded
+exit
+
 # change homepage link to https
 sed %sedext% \
 	-f scripts/homepage.sed \
