[core, src] Make it easy to add local changes to CFLAGS when building
The Makefile already loads local.mk (if it exists) but it doesn't let it
easily change CFLAGS. I've added a variable - LOCAL_C - that is added to
CFLAGS.

To make your local changes just create a src/local.mk, and put a line
like this in it:

  LOCAL_C=	-DMY_LITTLE_PWNIE

(for example).

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -14,7 +14,7 @@
 # .sinclude fails on OpenBSD!
 .include "local.mk"
 
-CFLAGS=		-O2 -Wall -fomit-frame-pointer ${ARCH_C} ${DEBUG}
+CFLAGS=		-O2 -Wall -fomit-frame-pointer ${ARCH_C} ${LOCAL_C} ${DEBUG}
 LDFLAGS=	${ARCH_LD}
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
 #DEBUG+=		-DBEING_DEFINED
