Simplified use of sed; we assume we can use -E
Instead of trying to figure out whether a platform has BSD or GNU sed
(or something else entirely, like the sed in busybox) we now assume that
the platform sed understand the POSIX -E flag, which changes the type of
regular expressions from "basic" to "extended".

If your sed can't do this, find one that can. GNU sed is one example
(but that is *not* an endorsement or even a recommendation!). And it may
have to be a newish GNU sed. I think I went through the rigamarole of
detecting which sed was available because BSD sed *supported* the POSIX
-E flag, while GNU sed did not (it used -r instead, but now supports
both).

I wonder whether busybox's or toybox's sed supports -E ?

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -64,7 +64,7 @@ public.h : .public.h
 runtime_chain.h : public.h ../scripts/gen_dict_chain.sed $(makefiles)
 	@echo Making ${.TARGET}
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
-	sed ${SEDEXT} \
+	sed -E \
 		-f ../scripts/keep_preprocessor.sed \
 		-e '/^void mu_runtime/!d' \
 		-e 's/mu_runtime_/mu_/' \
@@ -75,7 +75,7 @@ runtime_chain.h : public.h ../scripts/gen_dict_chain.sed $(makefiles)
 forth_chain.h : public.h ../scripts/gen_dict_chain.sed $(makefiles)
 	@echo Making ${.TARGET}
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
-	sed ${SEDEXT} \
+	sed -E \
 		-f ../scripts/keep_preprocessor.sed \
 		-e '/^void mu_compiler/d' \
 		-e '/^void mu_runtime/d' \
@@ -85,7 +85,7 @@ forth_chain.h : public.h ../scripts/gen_dict_chain.sed $(makefiles)
 compiler_chain.h : public.h ../scripts/gen_dict_chain.sed $(makefiles)
 	@echo Making ${.TARGET}
 	@(echo "/* This file is automagically generated. Do not edit! */"; \
-	sed ${SEDEXT} \
+	sed -E \
 		-f ../scripts/keep_preprocessor.sed \
 		-e '/^void mu_compiler/!d' \
 		-e 's/mu_compiler_/mu_/' \
@@ -102,7 +102,7 @@ ${ALLOBJS:.o=.ph} : $(makefiles)
 .c.ph :
 	@echo Making ${.TARGET}
 	@(echo "/* ${.IMPSRC} */"; \
-	sed ${SEDEXT} -n \
+	sed -E -n \
 		-e '/^static /d' \
 		-e '/^#(if|else|endif)/p' \
 		-e 's/^([a-z]+ \**[a-zA-Z_0-9]+)\((void)?\).*$$/\1(void);/p' \
@@ -180,10 +180,10 @@ SEDFILES=	README Makefile.in muforth.h *.c *.mu4
 MU4DIRS=	Test cf games lib target target/common target-arm
 httplink :
 	for f in ${SEDFILES}; do \
-		sed ${SEDEXT} -f ../scripts/httplink.sed $$f > $$f.sed; done
+		sed -E -f ../scripts/httplink.sed $$f > $$f.sed; done
 	for d in ${MU4DIRS}; do \
 		for f in $$d/*.mu4; do \
-			sed ${SEDEXT} -f ../scripts/httplink.sed $$f > $$f.sed; done; done
+			sed -E -f ../scripts/httplink.sed $$f > $$f.sed; done; done
 
 diffsed :
 	-(for f in ${SEDFILES}; do diff -u $$f $$f.sed ; done) | less
