[core] Debug USB added for usb-pipes (BSD)

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -20,7 +20,7 @@ LDFLAGS=	${ARCH_LD}
 #DEBUG+=		-DBEING_DEFINED
 #DEBUG+=		-DDEBUG_TOKEN
 #DEBUG+=		-DDEBUG_STACK
-#DEBUG+=		-DDEBUG_USB_ENUMERATION
+#DEBUG+=		-DDEBUG_USB
 
 # Core objects
 COREOBJS=	kernel.o engine-itc.o interpret.o dict.o error.o
