--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -17,8 +17,8 @@
 CFLAGS=		-O2 -Wall -fomit-frame-pointer ${ARCH_C} ${LOCAL_C} ${DEBUG}
 LDFLAGS=	${ARCH_LD}
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
-#DEBUG+=		-DBEING_DEFINED
-#DEBUG+=		-DDEBUG_TOKEN
+DEBUG+=		-DBEING_DEFINED
+DEBUG+=		-DDEBUG_TOKEN
 #DEBUG+=		-DDEBUG_STACK
 #DEBUG+=		-DDEBUG_USB_ENUMERATION
 
