[core] Makefile.in: make it easier to tweak CFLAGS and LDFLAGS
I had a LOCAL_C that was included in CFLAGS that could be defined in
local.mk, but there was nothing for LDFLAGS.

This adds LOCAL_LD to LDFLAGS.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -15,7 +15,7 @@
 .include "local.mk"
 
 CFLAGS=		-O2 -Wall -fomit-frame-pointer ${ARCH_C} ${LOCAL_C} ${DEBUG}
-LDFLAGS=	${ARCH_LD}
+LDFLAGS=	${ARCH_LD} ${LOCAL_LD}
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
 #DEBUG+=		-DBEING_DEFINED
 #DEBUG+=		-DDEBUG_TOKEN
