[core] Made it easy to dump dictionary

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -17,6 +17,7 @@
 CFLAGS=		-O2 -Wall -fomit-frame-pointer ${ARCH_C} ${LOCAL_C} ${DEBUG}
 LDFLAGS=	${ARCH_LD} ${LOCAL_LD}
 #DEBUG=		-g -DDEBUG -DBEING_DEFINED
+#DEBUG+=		-DDEBUG_DICT
 #DEBUG+=		-DBEING_DEFINED
 #DEBUG+=		-DDEBUG_TOKEN
 #DEBUG+=		-DDEBUG_STACK
