Vim-related: Improve installation of Vim files into $HOME
Previously the "install-vim" makefile target would tar up the .vim/
directory in the muforth source tree and untar it into the user's home
directory.

This works fine until the muforth settings change.

It seems like it might be easier to make symlinks from the user's .vim/
to muforth's .vim/, so the user gets updated when muforth updates.
(Unless they don't want the muforth changes, in which case they have to
break the symlinks and copy and modify the files manually.)

To make this work easily I had to change a shell variable. I used to use
"MU_DIR" to point to /some/path/muforth/mu/. Since the .vim/ directory
is above mu/, now I have MUFORTH_ROOT, which points to
/some/path/muforth/. I can use this for the (modified) install-vim
target, and MU_DIR is simply MUFORTH_ROOT/mu/.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -138,7 +138,7 @@ file.o : muhome.h
 
 muhome.h : ${makefiles}
 	@echo Making ${.TARGET}
-	@echo "#define MU_DIR \"${MU_DIR}\"" > ${.TARGET}
+	@echo "#define MU_DIR \"${MUFORTH_ROOT}/mu\"" > ${.TARGET}
 
 muforth : ${ALLOBJS} ${DEPFILES}
 	${CC} ${LDFLAGS} -o ${.TARGET} ${ALLOBJS} ${LIBS}
@@ -177,8 +177,13 @@ avr : avr.img
 	avrdude -v -c stk500 -p t45 -P /dev/ttyS0 -U flash:w:${.ALLSRC}:r
 
 # install Vim bits
+# Make symlinks in user's .vim/ that refer to the mu4 settings in the muforth
+# tree.
 install-vim :
-	tar cf - .vim | (cd ~; tar xf -)
+	@echo Making symlinks in ${HOME}/.vim
+	@mkdir -p ${HOME}/.vim/{ftdetect,ftplugin}
+	@for d in ftdetect ftplugin ; do \
+		ln -sf ${MUFORTH_ROOT}/.vim/$$d/mu4.vim ${HOME}/.vim/$$d/ ; done
 
 ### BSD start ###
 
